# JavaProjects

./: .gitignore  MODULE.bazel  README.md  WORKSPACE  maven_install.json
.github/workflows/: main.yml
employee-management/: .classpath  .project  README.md  checkstyle.xml  pom.xml
employee-management/src/main/java/com/tedsilb/employeemanagement/: Application.java  DatastoreUtil.java  EmployeeManagement.java  IOUtil.java  Main.java  Protos.java  StringUtil.java
employee-management/src/main/proto/: employee.proto
employee-management/src/test/java/com/tedsilb/employeemanagement/: ApplicationTest.java  EmployeeManagementTest.java
java/com/tedsilb/employeemanagement/: BUILD  DatastoreUtil.java  IOUtil.java  Main.java  ResourceNameUtil.java  StringUtil.java
java/com/tedsilb/employeemanagement/proto/: BUILD  employee.proto
javatests/com/tedsilb/employeemanagement/: BUILD  MainTest.java  ResourceNameUtilTest.java
