module(name = "com_github_tedsilb_javaprojects", version = "0.0.1")

bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "protobuf", version = "33.0-rc1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_jvm_external", version = "6.8")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.artifact(
    artifact = "google-auth-library-oauth2-http",
    group = "com.google.auth",
    version = "1.39.1",
)
maven.artifact(
    artifact = "google-cloud-datastore",
    group = "com.google.cloud",
    version = "2.32.1",
)
maven.artifact(
    artifact = "flogger",
    group = "com.google.flogger",
    version = "0.9",
)
maven.artifact(
    artifact = "flogger-system-backend",
    group = "com.google.flogger",
    version = "0.9",
)
maven.artifact(
    artifact = "guava",
    group = "com.google.guava",
    version = "33.5.0-jre",
)
maven.artifact(
    artifact = "protobuf-java",
    group = "com.google.protobuf",
    version = "4.32.1",
)
maven.artifact(
    artifact = "truth",
    group = "com.google.truth",
    version = "1.4.5",
)
maven.artifact(
    artifact = "junit",
    group = "junit",
    version = "4.13.2",
)
maven.artifact(
    artifact = "mockito-core",
    group = "org.mockito",
    version = "5.20.0",
)

maven.install(
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    lock_file = "//:maven_install.json",
)

use_repo(maven, "maven", "unpinned_maven")

